[package]
name = "quade"
version = "0.0.1"
authors = ["Sayan Chowdhury <namoskar@yudocaa.in>"]
edition = "2019"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
diesel = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.9.0"
